--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -114,7 +114,7 @@
   font-family: inherit;
   font-weight: inherit;
   line-height: 1.3;
-  word-break: break-word;
+  word-break: break-all;
   overflow-wrap: break-word;
 }
 
