--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,7 @@
   --body-font-size-xs: 10px;
   --heading-font-size-xxl: 70px;
   --heading-font-size-xl: 32px;
-  --heading-font-size-l: 22;
+  --heading-font-size-l: 22px;
   --heading-font-size-m: 16px;
   --heading-font-size-s: 14px;
   --heading-font-size-xs: 12px;
