--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -29,7 +29,6 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  min-height: min(50vw, calc(100dvh - var(--header-height)));
 }
 
 .carousel .carousel-slide:has(.carousel-slide-content[data-align='center']) {
@@ -55,7 +54,7 @@
   z-index: 1;
   margin: 68px;
   padding: 16px;
-  color: white;
+  color: var(--title-text-color-dark);
   background-color: rgba(254 254 254 / 60%);
   position: relative;
   width: var(--slide-content-width, auto);
