--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
   --light-color: #f8f8f8;
   --dark-color: #666;
   --text-color: #222;
-  --accent-color: #e5334e;
+  --accent-color: #e1163c;
   --title-text-color: #61126b;
   --title-text-color-dark: #4f145b;
   --link-color: #da0530;
