--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -33,6 +33,7 @@ header nav[aria-expanded='true'] {
 @media (width >= 900px) {
   header nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: 0 32px;
     max-width: 1264px;
@@ -278,4 +279,31 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+}
+
+header nav .nav-global {
+  background-color: var(--accent-color);
+  align-self: flex-start;
+  width: 100%;
+}
+
+header nav .nav-global ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+  margin-right: 50px;
+  margin-top: 0.5em;
+}
+
+header nav .nav-global ul li {
+  list-style: none;  
+}
+
+header nav .nav-global ul li a {
+  color: var(--background-color);
+  align-items: baseline;
+}
+
+header nav .nav-global ul li a:hover {
+  text-decoration: underline;
 }
