--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,12 +132,12 @@
     --body-font-size-m: 16px;
     --body-font-size-s: 12px;
     --body-font-size-xs: 10px;
-    --heading-font-size-xxl: 12px;
-    --heading-font-size-xl: 25px;
-    --heading-font-size-l: 13px;
-    --heading-font-size-m: 12px;
-    --heading-font-size-s: 9.96px;
-    --heading-font-size-xs: 8.04px;
+    --heading-font-size-xxl: 36px;
+    --heading-font-size-xl: 32px;
+    --heading-font-size-l: 22px;
+    --heading-font-size-m: 16px;
+    --heading-font-size-s: 14px;
+    --heading-font-size-xs: 12px;
     --nav-height: 120px;
   }
 }
@@ -336,4 +336,9 @@ main .section.light, main .section.highlight {
 
 .section.section-3 {
   background: rgb(0 0 0 / 0%) linear-gradient(150deg, rgb(225 22 60), rgb(161 20 83)) repeat scroll 0% 0% / auto padding-box border-box;
+}
+
+/** template specific styling **/
+body.homepage h1 {
+  display: none;
 }
