--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -137,7 +137,7 @@
   flex: 1 1 0%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   padding: 18px 52px 4px; /* even more left/right, minimal bottom */
   border-right: 1px solid #eee;
@@ -190,8 +190,8 @@
 .columns.columns20 > div > div p:last-of-type picture,
 .columns.columns20 > div > div p:last-of-type img {
   vertical-align: middle;
-  width: 16px;
-  height: 16px;
+  width: 55px;
+  height: 55px;
   margin-left: 2px;
   display: inline-block;
 }
