colums link arrow

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -171,6 +171,22 @@
   line-height: 1.6;
 }
 
+.columns.columns20 p a {
+  background-color: unset;
+}
+
+.columns.columns20 p a::after {
+    display: inline-block;
+  vertical-align: middle;
+  width: 14px;
+  height: 14px;
+  margin-left: 2px;
+  
+  /** this should be an arrow rather than a triangle **/
+  background: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 3l5 5-5 5' stroke='%23e65c7b' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E") no-repeat center/14px 14px;
+  content: "";
+}
+
 /* CTA link (first a in last p) */
 .columns.columns20 > div > div p:last-of-type a:first-child {
   color: #A23C97;
